--- a/Capper/Capper.csproj
+++ b/Capper/Capper.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>0.0.2-pre</Version>
-    <Description>A simple and auto-instrumentable ORM for your .NET distributed cache</Description>
+    <Version>0.0.3-pre</Version>
+    <Description>Simple and powerful strongly typed read-through caching extensions for .NET's IDistributedCache</Description>
   </PropertyGroup>
 
   <ItemGroup>
