--- a/Capper/Capper.csproj
+++ b/Capper/Capper.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>0.0.7-pre</Version>
+    <Version>1.0.0</Version>
     <Description>Simple and powerful strongly typed read-through caching extensions for .NET's IDistributedCache</Description>
   </PropertyGroup>
 
