--- a/Capper.Samples.AspNetFSharp/Capper.Samples.AspNetFSharp.fsproj
+++ b/Capper.Samples.AspNetFSharp/Capper.Samples.AspNetFSharp.fsproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.17" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Capper\Capper.csproj" />
+  </ItemGroup>
+
 </Project>
